# rust-camunda-client

./: Cargo.toml  README.md
docs/: AtomLink.md  AttachmentDto.md  AttachmentDtoAllOf.md  CaseDefinitionDto.md  ConditionApi.md  DecisionDefinitionDto.md  DeploymentApi.md  EventSubscriptionApi.md  ExternalTaskApi.md  ExternalTaskQueryDto.md  FetchExternalTaskTopicDto.md  FetchExternalTasksDto.md  HistoricProcessInstanceQueryDto.md  IncidentStatisticsResultDto.md  MessageApi.md  MetricsApi.md  ProcessDefinitionApi.md  ProcessDefinitionDto.md  ProcessDefinitionSuspensionStateDto.md  ProcessInstanceApi.md  ProcessInstanceModificationDto.md  ProcessInstanceModificationInstructionDto.md  ProcessInstanceQueryDto.md  RestartProcessInstanceDto.md  SignalApi.md  StartProcessInstanceDto.md  TaskApi.md  TaskDto.md  TaskQueryDto.md  TaskVariableApi.md  VariableQueryParameterDto.md
src/apis/: client.rs  condition_api.rs  configuration.rs  deployment_api.rs  engine_api.rs  event_subscription_api.rs  external_task_api.rs  message_api.rs  metrics_api.rs  mod.rs  process_definition_api.rs  process_instance_api.rs  schema_log_api.rs  signal_api.rs  task_api.rs  task_attachment_api.rs  task_comment_api.rs  task_identity_link_api.rs  task_local_variable_api.rs  task_variable_api.rs  version_api.rs
src/models/: activity_instance_dto.rs  activity_instance_incident_dto.rs  activity_statistics_result_dto.rs  atom_link.rs  attachment_dto.rs  attachment_dto_all_of.rs  authorization_exception_dto.rs  authorization_exception_dto_all_of.rs  batch_dto.rs  case_definition_dto.rs  comment_dto.rs  (+91 more)
