[package]
name = "camunda-client"
version = "0.1.1"
authors = ["Danilo Amoroso", "OpenAPI Generator team and contributors"]
description = "Rust client for camunda Rest API"
license = "Apache-2.0"
homepage = "https://github.com/Dansvidania/rust-camunda-client"
documentation = "https://github.com/Dansvidania/rust-camunda-client"
repository = "https://github.com/Dansvidania/rust-camunda-client.git"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
reqwest = "~0.9"

[dev-dependencies]
